--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "@huit-artifactory/harvard-patterms",
-  "version": "0.1.0",
+  "name": "harvard-patterns",
+  "version": "0.1.1",
   "files": [
     "vendor/assets"
   ],
-  "publishConfig": {
-    "registry": "https://artifactory.huit.harvard.edu/artifactory/api/npm/lts-npm/"
-  },
   "dependencies": {
     "bootstrap-icons": "^1.11.3",
-    "next": "^15.2.4",
+    "bootstrap": "^5.3.3",
     "sass": "^1.80.6",
     "scss": "^0.2.4"
   },
